--- a/style.css
+++ b/style.css
@@ -102,3 +102,7 @@ figure p {
     background-color: #fff;
     padding: 2rem;
 }
+.step .inner2{
+    background-color: #ffffff00;
+    padding: 2rem;
+}
